# gcp-arch-expert-curator

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: build-push.yml  ci.yml
config/ai-agents/: freshness-sources.yaml
config/compute-serverless/: freshness-sources.yaml
config/data-platform/: freshness-sources.yaml
config/databases/: freshness-sources.yaml
config/finops/: freshness-sources.yaml
config/gke-containers/: freshness-sources.yaml
config/iac-devops/: freshness-sources.yaml
config/iam-org-policy/: freshness-sources.yaml
config/networking/: freshness-sources.yaml
config/observability-sre/: freshness-sources.yaml
config/prompts/: freshness.md  promote.md
config/security-compliance/: freshness-sources.yaml
src/curator/: _paths.py  claude_client.py  fetcher.py  freshness.py  git_ops.py  github_app.py  main.py  manifest.py  promote.py  validator.py
tests/: conftest.py  test_claude_client.py  test_fetcher.py  test_freshness.py  test_github_app.py  test_main.py  test_manifest.py  test_promote.py  test_smoke.py  test_validator.py
tests/fixtures/: canon-bad-frontmatter.md  canon-missing-section.md  canon-valid.md  manifest.json
