[project]
name = "gcp-arch-expert-curator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "githubkit>=0.11.0",
  "pyyaml>=6.0.2",
  "httpx>=0.27.0",
  "trafilatura>=1.12.0",
  "python-dateutil>=2.9.0",
  "google-cloud-secret-manager>=2.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
